Time: 8 ms (10.33%), Space: 46.4 MB (10.89%) - LeetHub